fix: use `getFirst` for parameter retrieval in ReflectionRepositorySupplier